File Name: CHANGES

01/14/2017 FASP 1.9.0:
- Separate data structures and routines for reservoir simulation from base.
- Change block_iCSRmat to iBLCmat and corresponding functions.
- Delete some deprecated functions.
- Fix a bug in interpolation.c: reported by Liu Hui.
- Remove ilu.f from SparseKit.
- Clean up GMG code.

01/10/2017 FASP 1.8.9:
- Fix some memory leaks in AMG setup routines while early termination.
- Fix some warnings in PVBiCGstab.
- Fix some warnings in ILU.

12/30/2016 FASP 1.8.8:
- Update docomentation and webpage. 
- Add ILU subroutines with OpenMP support.
- Change block_dCSRmat to dBLCmat and corresponding functions.
- Change _bdcsr_ to _dblc_.
- Modify VS10 for new function names.
- Major changes which makes previous versions not compatible.

10/18/2016 FASP 1.8.7:
- Fix a bug in dvec_axpyz.
- Fix Makefile when FASP.mk is missing.

09/22/2016 FASP 1.8.6:
- Make changes for new preconditioners in FASP4BLKOIL.
- Translate ILU from Fortran to C.
- Add a new flag for using C version ILU.
- Add symbfactor in C.
- Modify VS10 for new ILU routines accordingly.
- Remove ilu.f from the windows VS10 version.
- Correct coarsening for positive off-diag entries.
- Test FASP on macOS Sierra 10.12; seems consistently slower than 10.11.

03/06/2016 FASP 1.8.5:
- Fix a bug in BSR AMG.
- Add some comments and reference for GCR.
- Add a new version of BiCGstab implementation.
- Update regeression results.
- Refresh function decroration in fasp_functs.h.

02/15/2016 FASP 1.8.4:
- Add an interface to Intel MKL PARDISO.
- Add PARDISO option for coarse solver of AMG.
- Remove some warnings.
- Test GCC 5.3.
- Reformat CMakeFile.
- Update developer list.
- Update website and documentation.

11/02/2015 FASP 1.8.3:
- Fixed the broken FASP package on fasp.sf.net.

10/18/2015 FASP 1.8.2:
- Removed password protect from fasp.sf.net.
- Updated the webpage and documentation.
- Added more output for Makefiles and INSTALL.